--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 	</parent>
 	<groupId>com.htu</groupId>
 	<artifactId>com.htu.pet-clinic-htu</artifactId>
-	<version>0.0.1</version>
+	<version>0.0.1-SNAPSHOT</version>
 	<name>pet-clinic-htu</name>
 	<description>Htu Pet Clinic using Spring</description>
 	<packaging>pom</packaging>
@@ -53,7 +53,7 @@
 	</modules>
 	
 	<scm>
-		<developerConnection>https://github.com/hturamoar/pet-clinic-htu.git</developerConnection>
+		<developerConnection>scm:git:git@github.com:hturamoar/pet-clinic-htu.git</developerConnection>
 	  <tag>com.htu.pet-clinic-htu-0.0.1</tag>
   </scm>
 </project>
