--- a/pet-clinic-web/pom.xml
+++ b/pet-clinic-web/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>com.htu</groupId>
 		<artifactId>com.htu.pet-clinic-htu</artifactId>
-		<version>0.0.1-SNAPSHOT</version>
+		<version>0.0.1</version>
 	</parent>
 	<artifactId>pet-clinic-web</artifactId>
 	<name>pet-clinic-web</name>
