--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 	</parent>
 	<groupId>com.htu</groupId>
 	<artifactId>com.htu.pet-clinic-htu</artifactId>
-	<version>0.0.1</version>
+	<version>0.0.2-SNAPSHOT</version>
 	<name>pet-clinic-htu</name>
 	<description>Htu Pet Clinic using Spring</description>
 	<packaging>pom</packaging>
